--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,7 +42,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.azhansy.todo"
+        applicationId "com.azhansy.tobo"
         minSdkVersion 25
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
@@ -55,7 +55,6 @@ android {
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.debug
             ndk {
