--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: todo
+name: tobo
 description: A new todo application.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
