--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,33 +1,39 @@
 name: tobo
 description: A new todo application.
-
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+publish_to: none
 version: 1.0.0+1
-
 environment:
   sdk: ">=2.12.0 <3.0.0"
 dependencies:
   flutter:
     sdk: flutter
   awesome_core:
-    path: ../flutter_awesome_core
+    path: "../flutter_awesome_core"
   flutter_dotenv: "^5.0.2"
   data_plugin:
     git:
       url: https://github.com/azhansy/bmob-flutter-sdk.git
       path: data_plugin
-
-
+  #flr init f;r run
+  r_dart_library: 0.4.0-nullsafety.0
+  simple_animations: ^4.0.0
+dependency_overrides:
+  flutter_svg: "^0.22.0"
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 flutter:
-
   uses-material-design: true
   assets:
-    - .env
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+    - assets/images/background.png
+    - assets/images/clock.png
+    - assets/images/light-1.png
+    - assets/images/light-2.png
+    - ".env"
+flr:
+  core_version: 3.2.0
+  dartfmt_line_length: 80
+  assets:
+    - assets/images
+    - ".env"
+  fonts: []
