--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dev_dependencies:
   flutter_launcher_icons: "^0.9.0"
 flutter_native_splash:
   image: assets/images/logo3x.png
-  color: 8f93fb
+  color: ffffff
   fill: false
 flutter_icons:
   image_path: assets/images/logo.png
@@ -42,6 +42,7 @@ flutter:
   - assets/images/light-1.png
   - assets/images/light-2.png
   - assets/images/logo.png
+  - assets/images/logo.svg
   - assets/images/logo3x.png
   - ".env"
 flr:
