--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ flutter_native_splash:
   color: ffffff
   fill: false
 flutter_icons:
-  image_path: assets/images/logo.png
+  image_path: assets/images/logologo.png
   remove_alpha_ios: true
   android: true
   ios: true
