--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
       path: data_plugin
   r_dart_library: 0.4.0-nullsafety.0
   simple_animations: "^4.0.0"
+  flutter_slidable: ^1.0.0-dev.9
 dependency_overrides:
   flutter_svg: "^0.22.0"
 dev_dependencies:
