--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dev_dependencies:
     sdk: flutter
   flutter_native_splash: "^1.1.7+1"
   flutter_launcher_icons: "^0.9.0"
+  floor_generator: ^1.2.0
+  build_runner: ^2.1.2
 flutter_native_splash:
   image: assets/images/logo3x.png
   color: ffffff
