--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
       path: data_plugin
   r_dart_library: 0.4.0-nullsafety.0
   simple_animations: "^4.0.0"
-  flutter_slidable: ^1.0.0-dev.9
+  flutter_slidable: "^1.0.0-dev.9"
 dependency_overrides:
   flutter_svg: "^0.22.0"
 dev_dependencies:
@@ -24,8 +24,8 @@ dev_dependencies:
     sdk: flutter
   flutter_native_splash: "^1.1.7+1"
   flutter_launcher_icons: "^0.9.0"
-  floor_generator: ^1.2.0
-  build_runner: ^2.1.2
+  floor_generator: "^1.2.0"
+  build_runner: "^2.1.2"
 flutter_native_splash:
   image: assets/images/logo3x.png
   color: ffffff
@@ -41,12 +41,12 @@ flutter:
   - assets/images/background.png
   - assets/images/bg.png
   - assets/images/clock.png
-  - assets/images/ic_splash.png
   - assets/images/light-1.png
   - assets/images/light-2.png
   - assets/images/logo.png
   - assets/images/logo.svg
   - assets/images/logo3x.png
+  - assets/images/logologo.png
   - ".env"
 flr:
   core_version: 3.2.0
