修改container double infiny问题；

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,5 +48,9 @@
 		<false/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<key>NSCalendarsUsageDescription</key>
+        <string>TODO需要访问你的日历</string>
+        <key>NSRemindersUsageDescription</key>
+        <string>TODO需要访问你的提醒事项</string>
 	</dict>
 </plist>
