--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: tobo
 description: A new todo application.
 publish_to: none
-version: 1.0.0+5
+version: 1.0.0+6
 environment:
   sdk: ">=2.12.0 <3.0.0"
 dependencies:
@@ -21,6 +21,8 @@ dependencies:
   flutter_slidable: "^1.0.0-dev.9"
   flutter_update_dialog: "^2.0.0"
   alarm_calendar: "^0.0.5"
+  nova_alarm_plugin:
+    path: ../../plugin/nova_alarm_plugin-0.1.0
 dependency_overrides:
   flutter_svg: "^0.22.0"
 dev_dependencies:
