--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,7 +52,7 @@ android {
         versionName flutterVersionName
         ndk {
             // 设置支持的SO库架构，'arm64-v8a'支持64位
-            abiFilters 'armeabi-v7a'//, 'arm64-v8a'
+            abiFilters 'arm64-v8a'
         }
     }
 
@@ -68,7 +68,7 @@ android {
             signingConfig signingConfigs.release
             ndk {
                 // 设置支持的SO库架构，'arm64-v8a'支持64位
-                abiFilters 'armeabi-v7a'//, 'arm64-v8a'
+                abiFilters 'arm64-v8a'
             }
         }
 
@@ -77,7 +77,7 @@ android {
             signingConfig signingConfigs.release
             ndk {
                 // 设置支持的SO库架构，'arm64-v8a'支持64位
-                abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+                abiFilters 'armeabi-v7a', 'x86'
             }
         }
     }
